# warkawik

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/ai/: mod.rs
src/ai/ai_functions/: ai_artist.rs  ai_manager.rs
src/ai/helpers/: local.rs  mod.rs
src/ai/llm_api/: calls.rs
src/ai/models/agents/: agent_traits.rs  artist_agent.rs
src/ai/models/core_agent/: core_agent.rs  core_traits.rs
src/ai/models/manager/: manager.rs
src/ai_functions/: ai_artist.rs  mod.rs
src/api/: calls.rs
src/helpers/: command_line.rs  config.rs  local.rs  mod.rs  send_func.rs
src/json_serialization/: mod.rs  shader_req.rs
src/llm_api/: calls.rs
src/models/: mod.rs
src/models/agents/: agent_traits.rs  artist_agent.rs  mod.rs
src/models/core_agent/: core_agent.rs  core_traits.rs  mod.rs
src/models/general/: llm.rs
src/models/manager/: manager.rs
src/views/: mod.rs
src/views/shader/: create.rs  mod.rs
static/: new.frag  template.frag
warka_macros/: Cargo.toml
warka_macros/src/: lib.rs
