[package]
name = "warkawik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"]}
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"]}
warka_macros = { path = "warka_macros" }