[package]
name = "warkawik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"]}
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"]}
warka_macros = { path = "warka_macros" }

actix = "0.13"
actix-files = "0.6"
actix-web = "4.4"
actix-web-actors = "4.1"
actix-ws = "0.2.5"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
tokio-stream = "0.1.8"
futures = "0.3.30"
warp = "0.3.6"
pretty_env_logger = "0.5.0"
serde_yaml = "0.9.31"
