[package]
name = "warkawik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"]}
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"]}
warka_macros = { path = "warka_macros" }

futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
serde_yaml = "0.9.31"

actix-web = "4.0.1"
actix-service = "2.0.2"
actix-cors = "0.6.1"
diesel = {verison = "1.4.8", features = ["postgres", "chrono", "r2d2"]}
chrono = "0.4.19"
lazy_static = "1.4.0"
bcrypt = "0.13.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}
jsonwebtoken = "8.1.0"
redis = "0.21.5"
env_logger = "0.9.0"
